# waypoint

./: Cargo.toml  README.md  fly.toml
.github/workflows/: deploy-production-fly.yml
deployments/docker/: Dockerfile
src/: main.rs
